changed java 9 method to its java 8 equivalent
im not trying to install java 9...